@@ -4,11 +4,13 @@ Engine features:
 
 * Added 'loot.requires_status' and 'status_loot' properties to loot table definitions.
 * Support '/' as shorthand for 'exec' in the dev console. A space is not required after the slash.
+* Added 'spawn_level' property to map enemies. This follows the same syntax as the Power property of the same name.
 
 Engine fixes:
 
 * Fixed set item tooltips showing incorrect number of equipped items if a set item was on an inactive loadout.
 * Fixed dev console commands not working if they were preceded by whitespace.
+* Fixed spawning entities not counting towards summoned entity count.
 
 
 
